[project]
name = "haptic-overlay"
version = "0.1.0"
description = "Radial menu overlay triggered by haptic device input"
requires-python = ">=3.14"
dependencies = [
    "evdev>=1.9.3",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
]

[project.scripts]
haptic-overlay = "main:main"
haptic-overlay-settings = "settings:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config", "models", "settings"]

[tool.setuptools.packages.find]
include = ["ui*", "actions*", "mouse_listener*"]
